network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-service
spec:
  podSelector:
    matchLabels:
      app: np-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: np-trusted-client
